# smally

./: .air.toml  .dockerignore  .env.example  .env.production.example  .gitignore  .harper-dictionary.txt  CLAUDE.md  Cargo.toml  DEPLOYMENT_MIGRATION.md  Dockerfile  Dockerfile.nobuildkit  IMPLEMENTATION.md  MIGRATIONS.md  Makefile  README.md  build.rs  docker-compose.prod.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-4469701597e7b3eb322315131166f5d8d99248cb81bd7674d79ec2f102a98d86.json  query-4bc70aeca021a37c8e20f02e31595c166b7112f22b5baee68ef1b5fb6214dad8.json  query-cdcb2ada0e0fe4e37df3f46c4e41b1cfae56865ac87fafce4d844074ddad69ef.json  query-dc8947d94fd3cf8651b9f34551632454b0973c6d1757e7e41770b3e78c79f2ca.json  query-e2ab4ef27b2a906204184205bfdd41b4bad4de6cf805710bac8f3b01b5db94b4.json
ansible/: PRIVATE_REPO_SETUP.md  README.md  SECRET_MANAGEMENT.md  ansible.cfg  binary-deploy.yml  deploy.yml  playbook.yml  quick-deploy.yml  site.yml  vault-password.sh
ansible/group_vars/all/: vault.yml
ansible/inventory/: hosts.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: 50unattended-upgrades.j2  jail.local.j2
ansible/roles/docker/handlers/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/fastembed/defaults/: main.yml
ansible/roles/fastembed/handlers/: main.yml
ansible/roles/fastembed/tasks/: main.yml
ansible/roles/fastembed/templates/: env.production.j2
ansible/roles/smally/handlers/: main.yml
ansible/roles/smally/tasks/: main.yml
benches/: cache_bench.rs  inference_bench.rs  tokenizer_bench.rs
docs/: .gitignore  DEPLOYMENT.md  EVENT_SOURCING_ARCHITECTURE.md  IMPLEMENTATION.md  LOAD_TESTING.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  QUICK_TEST.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs.internal/: DEPLOYMENT.md  IMPLEMENTATION.md  OPENAPI.md  PERFORMANCE.md
docs/docs/: intro.md
docs/docs/api/: create-embedding-handler.api.mdx  embeddings.tag.mdx  errors.md  health-handler.api.mdx  health.tag.mdx  overview.md  root-handler.api.mdx  sidebar.ts  smally-embeddings-api.info.mdx
docs/docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/docs/guides/: caching.md  embedding-text.md  rate-limits.md
docs/docs/static/: openapi.json
docs/plugins/: node-polyfills.js
docs/src/css/: custom.css
docs/src/pages/: api.tsx
docs/static/: openapi.json
examples/: verify_cwt_token.rs
migrations/: 20250101000000_initial_schema.sql  20250114000000_initial_schema.sql  20250115000000_add_organizations.sql  20250115000000_remove_organization_slug.sql  20250115000001_fix_usage_api_key_fkey.sql  20250115000002_add_tokens_to_usage.sql  20250115000003_event_sourcing_schema.sql  20250116000000_add_last_selected_org_to_users.sql  20250116000000_remove_legacy_api_key_fields.sql
nginx/: README.md  nginx.conf
nginx/conf.d/: fastembed.conf  smally-binary.conf  smally.conf
prometheus/: prometheus.yml
scripts/: add_indexes.sql  build.sh  init_db.sh  run.sh
scripts/deployment/: backup.sh  build-and-deploy.sh  build-native.sh  build-no-buildkit.sh  build.sh  create-api-key.sh  deploy.sh  generate-env.sh  health-check.sh  manual-deploy.sh  quick-deploy.sh  restore.sh
scripts/performance/: k6_test.js  quick_test.js  run_benchmarks.sh  wrk_test.sh
src/: lib.rs  main.rs  test_utils.rs  uuid_dashless.rs
src/api/: api_keys.rs  mod.rs  organizations.rs  users.rs
src/auth/: mod.rs  session.rs
src/billing/: mod.rs
src/cache/: lru.rs  mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/inference/: mod.rs  tokenizer.rs
src/models/: mod.rs
src/monitoring/: mod.rs
src/security/: mod.rs
src/web/: api_keys.rs  auth.rs  dashboard.rs  mod.rs  organizations.rs
src/web/components/: layout.rs
systemd/: README.md  fastembed-backup.service  fastembed-backup.timer  fastembed.service  smally-backup.service  smally-binary.service  smally.service
terraform/: README.md  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
