[package]
name = "embed_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "embed_rs"
path = "src/lib.rs"

[[bin]]
name = "embed_rs"
path = "src/main.rs"

[[bin]]
name = "create_api_key"
path = "src/bin/create_api_key.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server and routing
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.1", features = ["full"] }

# Database (PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Redis cache
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# ONNX Runtime
ort = { version = "2.0.0-rc.10", features = ["half", "copy-dylibs"] }
ndarray = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Security
bcrypt = "0.15"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

# Metrics (Prometheus)
prometheus = { version = "0.13", features = ["process"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sync primitives
once_cell = "1.19"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "inference_bench"
harness = false
