[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "generate_keypair"
path = "src/bin/generate_keypair.rs"

[[bin]]
name = "create_token"
path = "src/bin/create_token.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server and routing
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }
time = "0.3"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
] }

# Redis cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# ONNX Runtime
ort = { version = "2.0.0-rc.10", features = ["half", "copy-dylibs"] }
ndarray = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"

# Environment variables
dotenvy = "0.15"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.11", features = ["v7", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bcrypt = "0.16"
jsonwebtoken = "9.3"
validator = { version = "0.18", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1"

# Metrics (Prometheus)
prometheus = { version = "0.13", features = ["process"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Sync primitives
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6.1"

# Fast hashing
seahash = "4.1"

# COSE/CWT (CBOR Object Signing and Encryption / CBOR Web Tokens)
coset = "0.3"

# HTML templating
maud = { version = "0.26", features = ["axum"] }

[build-dependencies]
chrono = "0.4"
rustc_version = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
common-access-token = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
serial_test = "3.0"

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "inference_bench"
harness = false
